[gd_scene load_steps=6 format=2]

[ext_resource path="res://Super_Squad_Rus.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus.gd" type="Script" id=2]
[ext_resource path="res://assets/Background_gameOver.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Menus" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tap" type="Label" parent="StartMenu"]
margin_left = 1042.0
margin_top = 406.0
margin_right = 1740.0
margin_bottom = 680.0
custom_fonts/font = SubResource( 1 )
text = "Tap to start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GameOverMenu"]
position = Vector2( 294, 0 )
texture = ExtResource( 3 )
centered = false

[node name="CurScore" type="Label" parent="GameOverMenu"]
margin_left = 376.0
margin_top = 396.0
margin_right = 939.0
margin_bottom = 521.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="GameOverMenu"]
margin_left = 974.0
margin_top = 395.0
margin_right = 1537.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 2 )
text = "BEST SCORE 81s"

[node name="Restart" type="Button" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -281.0
margin_top = -131.0
margin_right = 282.0
custom_fonts/font = SubResource( 2 )
text = "RESTRT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="GameOverMenu/Restart" to="." method="_on_Restart_pressed"]
